--- a/css/estilos.css
+++ b/css/estilos.css
@@ -99,6 +99,60 @@ main{
     margin-top: 40px;
 }
 
+.text__enlaces-cover{
+    width: 80%;
+}
+
+.text__enlaces-cover h1{
+    font-size: 26px;
+    color: grey;
+    font-weight: normal;
+}
+
+.text__enlaces-cover p{
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.article-section {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.article-section h2 a{
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+.article-section h2 a:hover{
+    opacity: 0.5;
+}
+
+.article-image {
+    width: 75px;
+    margin-right: 10px;
+}
+
+.text__articulo-cover{
+    width: 80%;
+}
+
+.text__articulo-cover h1{
+    font-size: 26px;
+    color: red;
+    font-weight: normal;
+}
+
+.text__articulo-cover p{
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
 .buttons__cover{
     display: flex;
     margin-top: 40px;
