--- a/css/estilos.css
+++ b/css/estilos.css
@@ -105,13 +105,13 @@ main{
 
 .text__enlaces-cover h1{
     font-size: 25px;
-    color: grey;
     font-weight: normal;
+    color: black;
 }
 
 .text__enlaces-cover p{
     font-size: 16px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 40px;
 }
 
@@ -143,7 +143,7 @@ main{
 
 .text__articulo-cover h1{
     font-size: 26px;
-    color: red;
+    color: royalblue;
     font-weight: normal;
 }
 
