--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -100,7 +100,7 @@ main{
 
 .text__articulo-cover h2{
     font-size: 21px;
-    color: rgb(161, 235, 235);
+    color: rgb(122, 162, 235);
     font-weight: normal;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -112,6 +112,27 @@ main{
     margin-bottom: 10px;
     color: white;
 }
+
+/* Estilos para la sección de comandos */
+.comandos {
+    margin-bottom: 10px;
+  }
+  
+  /* Estilos para el código */
+  code {
+    background-color: #f4f4f4;
+    padding: 4px;
+    font-family: monospace;
+  }
+  
+  /* Estilos para el botón */
+  .btn-copiar {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 6px 12px;
+    cursor: pointer;
+  }
 
 .blog-image {
     width: 100%;
