--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -113,6 +113,20 @@ main{
     color: white;
 }
 
+.text__articulo-cover ul li{
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+}
+
+.text__articulo-cover ol li{
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+}
+
 /* Estilos para la sección de comandos */
 .contenedor{
     position: relative;
