--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -163,6 +163,74 @@ main{
     border: 1px solid mediumspringgreen;
 }
 
+
+.matrix-division {
+    display: grid;
+    grid-template-columns: auto 30px auto 30px auto;
+    align-items: center;
+    text-align: center;
+}
+
+.matrixDiv {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    border: 1px solid white;
+    padding: 5px;
+    color: white;
+}
+
+.matrix-mul {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+    margin: 20px 0;
+}
+
+.matrixMul2x2 {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    gap: 5px;
+    align-items: center;
+    color: white;
+}
+
+.matrixMul2x1 {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(2, auto);
+    gap: 5px;
+    align-items: center;
+    color: white;
+}
+
+.cell {
+    border: 1px solid white;
+    padding: 5px;
+}
+
+.division, .sign, .equals {
+    font-size: 20px;
+    margin: 0 5px;
+    color: white;
+}
+
+/* Additional styling for specific cells */
+.matrix-a2x2 .cell:nth-child(1), .matrix-a2x2 .cell:nth-child(4) {
+    color: #f0f0f0;
+}
+
+.matrix-b2x1 .cell:nth-child(1), .matrix-b2x1 .cell:nth-child(2) {
+    grid-row: span 2;
+}
+
+.matrix-c2x1 .cell:nth-child(1) {
+    grid-row: span 2;
+}
+
+
 /* Estilos para la sección de comandos */
 .contenedor{
     position: relative;
