--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -44,9 +44,9 @@ header{
 .menu nav ul a{
     font-size: 16px;
     text-decoration: none;
-    color: white;
+    color: silver;
     transition: opacity 300ms;
-    opacity: 0.7;
+    
 }
 
 .menu nav ul a:hover{
@@ -97,7 +97,7 @@ main{
     color: rgb(122, 162, 235);
     font-weight: normal;
     margin-bottom: 40px;
-    opacity: 0.7;
+    
 }
 
 .text__articulo-cover h2{
@@ -106,7 +106,7 @@ main{
     font-weight: normal;
     margin-top: 20px;
     margin-bottom: 20px;
-    opacity: 0.7;
+    
 }
 
 .text__articulo-cover p{
