--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -30,6 +30,7 @@ header{
 .logo img{
     width: 90px;
     filter: invert(100%) sepia(0%) saturate(7447%) hue-rotate(35deg) brightness(106%) contrast(100%);
+    opacity: 0.7;
 }
 
 .menu nav ul{
@@ -44,13 +45,13 @@ header{
 .menu nav ul a{
     font-size: 16px;
     text-decoration: none;
-    color: silver;
+    color: white;
     transition: opacity 300ms;
-    
+    opacity: 0.7;
 }
 
 .menu nav ul a:hover{
-    opacity: 0.6;
+    color: silver;
 }
 
 .btn__header-botonMenu{
@@ -62,6 +63,7 @@ header{
     font-size: 16px;
     cursor: pointer;
     transition: background, color, 300ms;
+    opacity: 0.7;
 }
 
 .btn__header-botonMenu:hover{
@@ -434,6 +436,7 @@ main{
         display: block;
         cursor: pointer;
         font-size: 24px;
+        opacity: 0.7;
     }
 
     .header__botonMenu{
