--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -283,18 +283,18 @@ main{
 
 .comandos button{
     padding: 10px;
-    background: darkblue;
-    color: #fff;
+    background: rgb(152, 182, 238);
+    color: #000;
     font-size: 18px;
     border: none;
     outline: none;
     border-radius: 10px;
     cursor: pointer;
-    opacity: 0.7;
+    
 }
 
 .comandos button:active{
-    background: blue;
+    background: rgb(89, 168, 221);
 }
 
 .comandos button:before{
@@ -302,7 +302,8 @@ main{
     position: absolute;
     top: -45px;
     left: 0px;
-    background: darkblue;
+    background: rgb(152, 182, 238);
+    color: #000;
     padding: 8px 10px;
     border-radius: 20px;
     font-size: 15px;
@@ -316,7 +317,7 @@ main{
     left: 25px;
     width: 10px;
     height: 10px;
-    background: darkblue;
+    background: rgb(152, 182, 238);
     transform: rotate(45deg);
     display: none;
 }
