--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -143,11 +143,12 @@ main{
     color: white;
     margin: 0 auto;
     border-collapse: collapse;
-    width: 100%;
+    
     border-spacing: 8px;
 }
 
 .text__articulo-cover table td, th {
+    width: 200px;
     border: 1px solid white; /* Define el estilo del borde de las celdas */
     padding: 8px; /* Añade espacio interno a las celdas */
     text-align: right; /* Alinea el contenido de las celdas a la derecha */
