--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -195,13 +195,13 @@ main{
 }
 
 .resaltado4 {
-    color: rgb(93, 202, 204);
+    color: rgb(126, 194, 196);
     font-style: italic;
     opacity: 1;
 }
 
 .resaltado5 {
-    color: rgb(231, 104, 104);
+    color: rgb(228, 124, 124);
     font-style: italic;
     opacity: 1;
 }
@@ -209,7 +209,7 @@ main{
 .resaltado6 {
     font-style: italic;
     opacity: 1;
-    color: rgb(201, 226, 61); /* Cambia el color a tu preferencia */
+    color: rgb(239, 255, 148); /* Cambia el color a tu preferencia */
 
 }
 
@@ -237,7 +237,7 @@ main{
 
 .resaltado9 {
     font-style: italic;
-    color: #8d95ff; /* Cambia el color a tu preferencia */ 
+    color: #a1a7fd; /* Cambia el color a tu preferencia */ 
     
 }
 
@@ -270,6 +270,12 @@ main{
     opacity: 1;
     color: #f776e2; /* Cambia el color a tu preferencia */
     font-style: italic;
+}
+
+.resaltado15 {
+    opacity: 1;
+    text-decoration: underline;
+    font-style: oblique;
 }
 
 .text__articulo-cover ul li{
