--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -237,7 +237,7 @@ main{
 
 .resaltado9 {
     font-style: italic;
-    color: #a1a7fd; /* Cambia el color a tu preferencia */ 
+    color: #acb1fc; /* Cambia el color a tu preferencia */ 
     
 }
 
