--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -441,14 +441,12 @@ main{
     font-family: monospace;
     max-width: 1000px; 
     /*border: 1px solid rgb(152, 182, 238);*/
-    overflow-x: scroll;
-    white-space: nowrap; /* Evitar el ajuste de línea */
     width: auto;
     background-color: #161515;
 }
 
 .comandos textarea.text {
-    padding: 10px;
+    padding: 5px;
     font-size: 16px;
     color: white;
     border: none;
@@ -457,9 +455,15 @@ main{
     border-top-left-radius: 10px;
     font-family: monospace;
     max-width: 1000px;
+    overflow-y: hidden;
     overflow-x: auto;
     white-space: nowrap;
+    width: auto;
     background-color: #161515;
+    scrollbar-width: thin; /* Ancho de la barra de desplazamiento en Firefox */
+    scrollbar-color: #ccc #161515; /* Color de la barra de desplazamiento en Firefox */
+    padding-top: 5px;
+    padding-bottom: 0px;
 }
 
 .comandos button{
@@ -512,11 +516,6 @@ main{
 .comandos.active button:before,
 .comandos.active button:after{
     display: block;
-}
-
-.comandos textarea.text {
-    scrollbar-width: thin; /* Ancho de la barra de desplazamiento en Firefox */
-    scrollbar-color: #ccc #161515; /* Color de la barra de desplazamiento en Firefox */
 }
 
 /* Estilos para la barra de desplazamiento horizontal */
