--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -628,6 +628,23 @@ main{
     font-family: monospace;
 }
 
+/* Estilos para la barra de desplazamiento horizontal */
+.codigo pre::-webkit-scrollbar {
+    width: 5px; /* Ancho de la barra de desplazamiento */
+    transition: all 0.3s;
+}
+
+.codigo pre::-webkit-scrollbar-thumb {
+    background-color: #888686; /* Color de la barra de desplazamiento */
+    border-radius: 2px; /* Radio de borde de la barra de desplazamiento */
+    transition: background-color 0.3s;
+    min-width: 10px;
+}
+
+.codigo pre::-webkit-scrollbar-thumb:hover {
+    background-color: #919090; /* Color de la barra de desplazamiento al pasar el cursor sobre ella */
+}
+
 .blog-image {
     width: 100%;
     text-align: center;
