--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -471,7 +471,7 @@ main{
     background: rgb(93, 138, 221);
     color: #000;
     font-size: 18px;
-    border: none;
+    border: 4px solid #161515;
     outline: none;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -521,18 +521,30 @@ main{
 /* Estilos para la barra de desplazamiento horizontal */
 .comandos textarea.text::-webkit-scrollbar {
     width: 5px; /* Ancho de la barra de desplazamiento */
+    background: #161515;
     transition: all 0.3s;
 }
 
+.comandos textarea.text::-webkit-scrollbar-track {
+    border 1px solid #fff;
+    box-shadow: 0 0 5px 5px #161515 inset;
+}    
+
 .comandos textarea.text::-webkit-scrollbar-thumb {
-    background-color: #ccc; /* Color de la barra de desplazamiento */
-    border-radius: 2px; /* Radio de borde de la barra de desplazamiento */
+    background: rgba(255, 255, 255, 0.2); /* Color de la barra de desplazamiento */
+    /*background: linear-gradient(45deg, #7678f7, #009933);*/
+    border-radius: 10px; /* Radio de borde de la barra de desplazamiento */
     transition: background-color 0.3s;
+    border-bottom: 6px solid #161515;
+    border-top: 6px solid #161515;
+    border-right: 2px solid #161515;
+    border-left: 2px solid #161515;
 }
 
 .comandos textarea.text::-webkit-scrollbar-thumb:hover {
-    background-color: #aaa; /* Color de la barra de desplazamiento al pasar el cursor sobre ella */
+    background-color: rgba(255, 255, 255, 0.3); /* Color de la barra de desplazamiento al pasar el cursor sobre ella */
 }
+
   /* Estilos para el código 
   code {
     background-color: #f4f4f4;
@@ -565,7 +577,7 @@ main{
 .mi-contenedor {
     background-color: #f4f4f4;
     padding: 0;
-    border-radius: 10px;
+    border-radius: 5px;
     margin: 0;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -577,8 +589,8 @@ main{
     color: #fff;
     height: 35px;
     line-height: 30px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     padding: 0 10px;
 }
 
@@ -602,19 +614,19 @@ main{
     background-color: #f4f4f4;
     padding: 0;
     font-family: monospace;
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 5px 5px;
     border-top: 1px solid #ccc;
     margin: 0; /* Elimina los márgenes predeterminados */
 }
 .codigo pre {
-    white-space: pre-wrap; /* Permite saltos de línea automáticos */
+    white-space: pre; /* Permite saltos de línea automáticos */
     tab-size: 4; /* Establece el tamaño de tabulación */
     font-size: 16px; /* Tamaño de fuente */
     line-height: 1.5; /* Altura de línea */
     background-color: #252323; /* Fondo */
     padding: 10px; /* Espaciado interno */
-    border-radius: 0; /* Bordes redondeados */
-    border: none; /* Borde */
+    border-radius: 0 0 5px 5px; /* Bordes redondeados */
+    border: 2px solid rgb(153, 229, 231); /* Borde */
     overflow-x: auto; /* Barra de desplazamiento horizontal si es necesario */
     text-align: left; /* Alinea el texto a la izquierda */
     margin: 0; /* Elimina los márgenes predeterminados */
@@ -631,18 +643,42 @@ main{
 /* Estilos para la barra de desplazamiento horizontal */
 .codigo pre::-webkit-scrollbar {
     width: 5px; /* Ancho de la barra de desplazamiento */
+    background: #252323;
     transition: all 0.3s;
 }
 
 .codigo pre::-webkit-scrollbar-thumb {
-    background-color: #888686; /* Color de la barra de desplazamiento */
+    background: rgba(255, 255, 255, 0.2); /* Color de la barra de desplazamiento */
+    /*background: linear-gradient(45deg, #7678f7, #009933);*/
     border-radius: 2px; /* Radio de borde de la barra de desplazamiento */
     transition: background-color 0.3s;
+    border-bottom: 6px solid #252323;
+    border-top: 6px solid #252323;
     min-width: 10px;
 }
 
 .codigo pre::-webkit-scrollbar-thumb:hover {
-    background-color: #919090; /* Color de la barra de desplazamiento al pasar el cursor sobre ella */
+    background-color: rgba(255, 255, 255, 0.3); //* Color de la barra de desplazamiento al pasar el cursor sobre ella */
+}
+
+body::-webkit-scrollbar {
+    width: 7px; /* Ancho de la barra de desplazamiento */
+    background: #252323;
+    transition: all 0.3s;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2); /* Color de la barra de desplazamiento */
+    /*background: linear-gradient(45deg, #7678f7, #009933);*/
+    border-radius: 2px; /* Radio de borde de la barra de desplazamiento */
+    transition: background-color 0.3s;
+    border-bottom: 6px solid #252323;
+    border-top: 6px solid #252323;
+    min-width: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.3); //* Color de la barra de desplazamiento al pasar el cursor sobre ella */
 }
 
 .blog-image {
