--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -132,7 +132,8 @@ main{
 
 .text__articulo-cover h4{
     font-size: 20px;
-    /*color: rgb(122, 162, 235);*/
+    /*color: rgb(122, 162, 235);
+    color: rgb(94, 177, 62);*/
     color: rgb(243, 145, 53);
     font-weight: normal;
     margin-top: 20px;
@@ -141,13 +142,11 @@ main{
 }
 
 .text__articulo-cover h5{
-    font-size: 20px;
-    /*color: rgb(122, 162, 235);*/
-    color: rgb(94, 177, 62);
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
     font-weight: normal;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    
 }
 
 .text__articulo-cover h6{
@@ -159,6 +158,8 @@ main{
     margin-bottom: 20px;
     
 }
+
+
 
 .text__articulo-cover p{
     font-size: 16px;
@@ -684,6 +685,18 @@ body::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255, 255, 255, 0.3); //* Color de la barra de desplazamiento al pasar el cursor sobre ella */
 }
 
+.archivo {
+    background-color: rgb(31, 41, 31);
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid rgba(194, 74, 74, 0.438);
+    width: 100%;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /*#container {  
     display: flex;  
     justify-content: center;  
@@ -750,36 +763,57 @@ body::-webkit-scrollbar-thumb:hover {
     height: calc(100% - 30px);  
     padding-top: 2px;  
     margin-top: -1px;
-    padding-bottom: 2em;
-    overflow: auto;
+    padding-bottom: 1em;
+    overflow-x: auto;
 } 
 #terminal__prompt {  
     display: flex;
     flex-wrap: wrap;
 }
+.user {
+    color: #7eda28;
+}
 #terminal__prompt--user {  
     color: #7eda28;
-    white-space: nowrap;
 }
+
+.location {
+        color: #4878c0;
+}    
 #terminal__prompt--location { 
     color: #4878c0;
 }
+
+.tool {
+    color: #7ee4e7;
+}
+.param {
+    color:#7ebde7;
+}
+.sudo {
+    color: #7eda28;
+}
+
 #terminal__prompt--command { 
     color: white;
-    display: inline;
     white-space: nowrap;
+    max-width: 94%;
 }
 #terminal__prompt--response {
     color: white;
-    white-space: pre;
+    
 }
 
-
+.bling{
+    color: #dddddd;   
+}
 #terminal__prompt--bling {  
     color: #dddddd;
+    
 }
 #terminal__prompt--cursor {  
-    display: block;  
+    white-space: nowrap; /* Evita que se divida en múltiples líneas */
+    display: inline; /* Permanece en la misma línea que el texto */
     height: 17px;  
     width: 1px;  
     margin-left: 9px;  
@@ -792,7 +826,7 @@ body::-webkit-scrollbar-thumb:hover {
     text-align: left;
     color: white;
     align-items: flex-start;
-  }
+}
 @keyframes blink {  
     0% {    
       background: #ffffff;  
@@ -809,11 +843,26 @@ body::-webkit-scrollbar-thumb:hover {
       background: #ffffff;  
     }
 } 
-@media (max-width: 600px) {  
-    #terminal {    
-      max-height: 90%;    
-      width: 90%;  
-    }
+
+#terminal__body::-webkit-scrollbar {
+    width: 5px; /* Ancho de la barra de desplazamiento */
+    background: rgba(56, 4, 40, 0.405); 
+    transition: all 0.3s;
+    
+}
+
+#terminal__body::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.034); /* Color de la barra de desplazamiento */
+    /*background: linear-gradient(45deg, #7678f7, #009933);*/
+    border-radius: 5px; /* Radio de borde de la barra de desplazamiento */
+    transition: background-color 0.3s;
+
+    
+    min-width: 10px;
+}
+
+#terminal__body::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.1); //* Color de la barra de desplazamiento al pasar el cursor sobre ella */
 }
 
 .blog-image {
