--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -688,15 +688,36 @@ body::-webkit-scrollbar-thumb:hover {
 .archivo {
     background-color: rgb(31, 41, 31);
     color: white;
-    padding: 10px;
-    border-radius: 10px;
+    padding-left: 10px;
+    border-radius: 5px;
     border: 2px solid rgba(194, 74, 74, 0.438);
     width: 100%;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
+    overflow-x: auto; 
+    white-space: pre;
 }
 
+.archivo::-webkit-scrollbar {
+    width: 5px; /* Ancho de la barra de desplazamiento */
+    background: rgb(31, 41, 31);
+    transition: all 0.3s;
+}
+
+.archivo::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2); /* Color de la barra de desplazamiento */
+    /*background: linear-gradient(45deg, #7678f7, #009933);*/
+    border-radius: 2px; /* Radio de borde de la barra de desplazamiento */
+    transition: background-color 0.3s;
+    border-bottom: 6px solid rgb(31, 41, 31);
+    border-top: 6px solid rgb(31, 41, 31);
+    min-width: 10px;
+}
+
+.archivo::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.3); //* Color de la barra de desplazamiento al pasar el cursor sobre ella */
+}
 /*#container {  
     display: flex;  
     justify-content: center;  
