--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -786,6 +786,7 @@ body::-webkit-scrollbar-thumb:hover {
     margin-top: -1px;
     padding-bottom: 1em;
     overflow-x: auto;
+    padding-left: 5px;
 } 
 #terminal__prompt {  
     display: flex;
